[workspace]
resolver = "3"

package.version     = "0.0.0"
package.edition     = "2024"
package.publish     = false
package.authors     = ["Salfa Chang <me@salfa.cn>"]
package.readme      = "README.md"
package.description = "A Rust implementation of DJI RoboMaster Protocol, including frame parsing and link management."

default-members = ["rm-frame"]

members = ["rm-frame", "rm-link-serial", "rm-link-vision"]


[profile]
release.lto   = true
release.debug = false


[workspace.dependencies]
# dji-frame       = { path = "dji-frame" }
# portable-atomic = { version = "1", features = ["float"] }

rm-frame = { path = "rm-frame" }


[workspace.dependencies.defmt]
version          = "1.0"
default-features = false


[profile.dev.package]
defmt.opt-level = 3
