[package]
name = "rm-frame"

version = "0.1.0"
license = "MIT OR Apache-2.0"

edition.workspace      = true
publish.workspace      = true
authors.workspace      = true
rust-version.workspace = true
readme.workspace       = true
homepage.workspace     = true
description.workspace  = true


[dependencies]
defmt = { workspace = true, optional = true }


[features]
defmt = ["dep:defmt"]
