[package]
name = "rm-frame"

version = "0.1.2"
publish = ["crates-io"]

edition.workspace      = true
authors.workspace      = true
rust-version.workspace = true
readme.workspace       = true
description.workspace  = true
license.workspace      = true

homepage.workspace      = true
repository.workspace    = true
categories.workspace    = true
keywords.workspace      = true
documentation.workspace = true


[dependencies]
defmt  = { workspace = true, optional = true }
atomic = { workspace = true, optional = true }


[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[features]
defmt  = ["dep:defmt"]
remote = ["dep:atomic"]
