[package]
name = "rm-link-serial"

version.workspace     = true
edition.workspace     = true
publish.workspace     = true
authors.workspace     = true
readme.workspace      = true
description.workspace = true


[dependencies]
rm-frame = { workspace = true }
defmt    = { workspace = true, optional = true }


[features]
defmt = ["dep:defmt"]
