[package]
name = "rm-link-vision"

version.workspace     = true
edition.workspace     = true
publish.workspace     = true
authors.workspace     = true
readme.workspace      = true
description.workspace = true


[dependencies]
rm-frame = { workspace = true }
defmt    = { workspace = true, optional = true }

portable-atomic = { version = "1.13" }


[features]
defmt = ["dep:defmt"]
